# volatile

./: Cargo.toml  Changelog.md
.github/workflows/: build.yml
src/: access.rs  lib.rs  volatile_ref.rs
src/volatile_ptr/: macros.rs  mod.rs  operations.rs
volatile-macro/: Cargo.toml
volatile-macro/src/: lib.rs  volatile.rs
